# geant4-boilerplate

./: .gitignore  CMakeLists.txt  README.md  gps6X_10x9.in  main.cc  spectrum_varian6X.mac  square_field_gps.mac  test.in  tracked_beamlets.txt  vis.mac
doc/: format_tracked_beamlets.txt  materials.txt
include/: AllActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  G4UserParticleWithDirectionFilter.hh  NestedParam.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh
src/: AllActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  G4UserParticleWithDirectionFilter.cc  NestedParam.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc  RunAction.cc  SteppingAction.cc
utils/: batch_runs.sh  combine_results.py
utils/make_phantoms/: build_geometry.py  fmaps.py  materials.py  simple_build_geometry.py  volume.py
